# stockdb

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
benches/: analysis.rs
docker/build-ubuntu/: Dockerfile
docker/web/: Dockerfile
migrations/2019-11-17-143052_create_stock_infos/: down.sql  up.sql
migrations/2019-11-17-170356_create_stock_exchanges/: down.sql  up.sql
migrations/2019-11-17-171131_create_historical_prices/: down.sql  up.sql
migrations/2019-11-17-171135_create_realtime_prices/: down.sql  up.sql
migrations/2019-11-17-204426_create_users/: up.sql
migrations/2019-11-17-204435_create_accounts/: up.sql
migrations/2019-11-17-204440_create_transactions/: up.sql
migrations/2019-12-21-222508_create_superfluous_stocks/: down.sql  up.sql
migrations/2019-12-24-234418_create_missing_stocks/: down.sql  up.sql
migrations/2020-03-01-105553_create_push_subscriptions/: down.sql  up.sql
migrations/2020-04-10-215933_add_transaction_exchange/: down.sql  up.sql
migrations/2020-04-14-083802_add_stock_breakdowns/: down.sql  up.sql
migrations/2020-04-14-085626_add_stock_holdings/: down.sql  up.sql
migrations/2020-04-14-095248_add_stock_optional_infos/: down.sql  up.sql
migrations/2020-04-15-202447_add_stock_description/: down.sql  up.sql
migrations/2020-04-20-212806_add_transaction_receipt_number/: down.sql  (+1 more)
package/: stockdb-backup.service  stockdb-backup.timer  stockdb.service  sysusers.d
src/: data.rs  lib.rs  models.rs  push.rs  receipts.rs  schema.rs  serialization.rs
web/: .eslintignore  .eslintrc.json  .gitignore  package.json
(+108 files in other folders)
